Hide Scrollbar Fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ h2 {
 }
 
 body {
-  overflow: hidden; /* Hide scrollbars */
+  overflow-x: hidden;
   background-color: #f8f7f4;
   color: black; /* Set the text color to white */
   margin-top: 90px;
@@ -71,6 +71,17 @@ a:hover {
   margin: 20px 0px 20px 0px;
   padding: 20px;
   text-align: center;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.example::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.example {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 hr {
